# MentorFlow

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  manage.py  pyproject.toml
.envs/.local/: django.env  postgres.env
apps/aiinteraction/: apps.py  models.py
apps/aiinteraction/migrations/: 0001_initial.py  0002_initial.py
apps/allsessions/: apps.py  models.py
apps/allsessions/migrations/: 0001_initial.py  0002_initial.py
apps/topic/: apps.py  models.py
apps/topic/migrations/: 0001_initial.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py
docker/local/: Dockerfile  celery-beat-entrypoint.sh  server-entrypoint.sh  worker-entrypoint.sh
requirements/: base.txt  local.txt
